modificaciones para correcta visualizacion de los avatar segunda version

--- a/src/components/EmpleadoAvatar.css
+++ b/src/components/EmpleadoAvatar.css
@@ -1,6 +1,12 @@
+.divImg{
+    max-width: 120px;
+    max-height: 120px;
+    display: flex;
+}
+
 .avatar{
     border-radius: 50%;
-    width: 50%;
+    width: 100%;
     object-fit:cover;
     overflow: hidden;
 }
